# advent_of_code

./: 2.cpp  2_branchless.cpp  2_xor.cpp  3.cpp  CMakeLists.txt  README.md
1/: 1.cpp  CMakeLists.txt
2/: 2.cpp  2_branchless.cpp  2_noif.cpp  2_test.txt  2_xor.cpp  CMakeLists.txt
3/: 3.cpp  3.hpp  3_test.cpp  CMakeLists.txt
4/: 4.cpp  4.hpp  4_input.txt  4_test.cpp  4_test.txt  CMakeLists.txt
